refactor(note): move logic to service and apply @RequiredArgsConstructor